k8s/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpn-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vpn-api
  template:
    metadata:
      labels:
        app: vpn-api
    spec:
      containers:
        - name: vpn-api
          image: ghcr.io/jah0x/vpn-api:latest
          ports:
            - containerPort: 4000
          readinessProbe:
            httpGet:
              path: /metrics
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10
