k8s/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpn-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vpn-frontend
  template:
    metadata:
      labels:
        app: vpn-frontend
    spec:
      containers:
        - name: vpn-frontend
          image: ghcr.io/jah0x/vpn-frontend:latest
          ports:
            - containerPort: 8081
