k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpn-ingress
spec:
  rules:
    - host: vpn-dash.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vpn-frontend
                port:
                  number: 8081
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: vpn-api
                port:
                  number: 4000
